grid css: mixin bugfix for align items
I wasn't passing the variable on in the mixin.  This fixes it so
styles using the mixin will work.

--- a/assets/css/romo/_mixins.scss
+++ b/assets/css/romo/_mixins.scss
@@ -60,8 +60,8 @@
 }
 
 @mixin flex-align-items($val) {
-  -webkit-align-items: flex-start;
-          align-items: flex-start;
+  -webkit-align-items: $val;
+          align-items: $val;
 }
 
 @mixin flex-align-self($val) {
